<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondRegFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etRegCompanyName"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/et_border"
            android:ems="10"
            android:hint="@string/company_name_hint"
            android:includeFontPadding="false"
            android:inputType="text"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/etRegFullNameContact"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/et_border"
            android:ems="10"
            android:hint="@string/full_name_hint"
            android:includeFontPadding="false"
            android:inputType="text"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/etRegPhoneNumContact"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/et_border"
            android:ems="10"
            android:hint="@string/phone_num_hint"
            android:includeFontPadding="false"
            android:inputType="numberSigned"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/etRegEmail"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/et_border"
            android:ems="10"
            android:hint="@string/email_hint"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp" />

        <Button
            android:id="@+id/btnoFinishReg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/button_border"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/go_reg"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</FrameLayout>