<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstRegFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etRegLogin"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/et_border"
            android:ems="10"
            android:hint="@string/login_hint"
            android:includeFontPadding="false"
            android:inputType="text"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/etRegPassword"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/et_border"
            android:ems="10"
            android:hint="@string/password_hint"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/etRegPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/et_border"
            android:ems="10"
            android:hint="@string/password_confirm_hint"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:paddingStart="10dp" />

        <Button
            android:id="@+id/btnGoRegNext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/button_border"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/go_further"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</FrameLayout>